# m4b1-model-training

./: .gitignore  Dockerfile  automated_reader.ipynb  main.py  mlflow.db  pyproject.toml  real-estate-price-model.ipynb  requirements.txt
mlruns/0/models/m-51de55a5d53141229def9c66d58755d9/artifacts/: MLmodel  model.pkl
mlruns/0/models/m-5d0ef74707c444cb88d6378fdb9c72a4/artifacts/: MLmodel
mlruns/0/models/m-6ec63cce387d48629f2d05dc443cc8cc/artifacts/: MLmodel  model.pkl
mlruns/0/models/m-73193368c1934992b4428d846cec9cf1/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/0/models/m-793c7fa049f5487eae8fe6d06a76e11a/artifacts/: MLmodel
mlruns/0/models/m-95224137e6ee4b2ebc965e81dfca8e69/artifacts/: MLmodel
mlruns/0/models/m-9df33634d5bd435abe1f9b28e3a22d8f/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/0/models/m-c00986ec48844405b0627cdc97543685/artifacts/: MLmodel  model.pkl
mlruns/0/models/m-f28b0bace66b4844a68b2265fd74f331/artifacts/: MLmodel
mlruns/0/models/m-f2d5ae7c3d5145608007dde035f710ae/artifacts/: MLmodel  model.pkl
